Fix alignment of plugins toolbar titles

--- a/rsc/less/bootstrap-evoskins.less
+++ b/rsc/less/bootstrap-evoskins.less
@@ -738,6 +738,7 @@ div.edit_toolbars, div.message_toolbars {
 		margin-bottom: 2px;
 	}
 	.btn-toolbar-title {
+		padding-top: 1px;
 		padding-left: 5px;
 		float: left;
 		font-weight: bold;
